name:          rdin
version:       0.1
synopsis:      Import music to Rdio from plain text files
description:   Import music to Rdio from plain text files
license:       GPL
author:        Patrick Brisbin
maintainer:    Patrick Brisbin <me@pbrisbin.com>
build-type:    Simple
cabal-version: >=1.6

executable rdin
  build-depends: base, transformers, rdioh
  ghc-options:   -static -Wall
  main-is:       rdin.hs

source-repository head
  type:     git
  location: git://github.com/pbrisbin/rdin.git
